--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,1 +1,20 @@
 @import './reset.scss';
+
+#app {
+  width: 100vw;
+  height: 100vh;
+}
+
+// 最优尺寸
+@media only screen and (min-width: 1681px) {
+
+}
+
+// 中型尺寸
+@media only screen and (max-width: 1680px) and (min-width: 1281px) {
+
+}
+
+// 最小尺寸
+@media only screen and (max-width: 1280px) {
+}
